Revert "Refactored to support iptables and bpf-based packet management (not implemented yet)"
This reverts commit 5a11fe0166f1c25b6af99237e496d061b000a843.